# VulkanFX

./: .gitattributes  README.md  layers_schema.json  meson.build  meson_options.txt
config/: VulkanFX.json.in  meson.build  vkBasalt.json.in
src/: basalt.cpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  config.cpp  config.hpp  descriptor_set.cpp  descriptor_set.hpp  effect.cpp  effect.hpp  effect_cas.cpp  effect_cas.hpp  effect_deband.cpp  effect_deband.hpp  effect_dls.cpp  effect_dls.hpp  effect_fxaa.cpp  effect_fxaa.hpp  effect_lut.cpp  effect_lut.hpp  effect_reshade.cpp  effect_reshade.hpp  effect_simple.cpp  effect_simple.hpp  effect_smaa.cpp  effect_smaa.hpp  effect_transfer.cpp  effect_transfer.hpp  fake_swapchain.cpp  fake_swapchain.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  (+30 more)
src/shader/: smaa.h
